# OpenMesh-AI

./: .env.example  .gitignore  README.md
.history/: README_20260720184336.md  README_20260720185100.md
.history/backend/app/: config_20260720115826.py  config_20260720122556.py
.history/backend/app/gateway/: router_20260720130035.py  router_20260720130046.py  router_20260720182715.py
.history/backend/app/memory/: store_20260720115827.py  store_20260720130300.py
.history/backend/app/planner/: workflows_20260720115827.py  workflows_20260720130009.py  workflows_20260720182547.py
.history/backend/app/registry/: service_20260720115827.py  service_20260720130223.py
.history/backend/docker/: docker-compose_20260720115827.yml  docker-compose_20260720122546.yml
.history/frontend/app/: page_20260720115827.tsx  page_20260720130459.tsx  page_20260720143404.tsx  page_20260720144413.tsx  page_20260720144600.tsx  page_20260720144712.tsx  page_20260720182024.tsx  page_20260720182128.tsx  page_20260720182424.tsx  page_20260720182520.tsx
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/gateway/: dependencies.py  models.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  gateway.py
backend/app/observability/: metrics.py
backend/app/planner/: __init__.py  agent.py  state.py
backend/docker/: Dockerfile.backend
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/tools/: page.tsx
frontend/app/workflows/: page.tsx
