[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmesh-ai"
version = "0.1.0"
description = "Universal AI Tool Operating System"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0,<3.0.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-ollama>=0.1.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "orjson>=3.10.0",
]
